--- a/stickyNotes/webapp/templates/index.html
+++ b/stickyNotes/webapp/templates/index.html
@@ -47,7 +47,7 @@
                             {{note|safe_markdown}}
                         </div>
                         <div class="card-footer">
-                            <btn class="btn btn-outline-primary float-end">View Note</btn>
+                            <a class="btn btn-outline-primary float-end" href="note/{{id}}">View Note</a>
                         </div>
                     </div>
 
@@ -69,7 +69,8 @@
 
     {% else %}
 
-    
+    <h3 class="text-center">Sticky notes</h3>
+    <p class="text-center">Login or Register to continue</p>
 
     {% endif %}
 
