Minor vuln adjustements

--- a/stickyNotes/webapp/templates/index.html
+++ b/stickyNotes/webapp/templates/index.html
@@ -47,7 +47,7 @@
                            {{note|safe_markdown}}
                         </div>
                         <div class="card-footer">
-                            <a class="btn btn-outline-primary float-end" href="note/{{id}}">View Note</a>
+                            <a class="btn btn-outline-primary float-end" href="note/{{request.user.id}}/{{id}}">View Note</a>
                         </div>
                     </div>
 
