--- a/stickyNotes/webapp/templates/viewNote.html
+++ b/stickyNotes/webapp/templates/viewNote.html
@@ -6,7 +6,9 @@
 
 <div class="container">
 
-    {{note|safe}}
+    <p class="float-end">Author: {{ author }}</p>
+
+    <p>{{note|safe}}</p>
 
 </div>
 
